# 8980-HW2

./: .gitignore  CMakeLists.txt  README.md
GEFS/: settings.cfg
GEFS/SimpleExample/: Prefabs.txt  main.lua
GEFS/models/: chalet.mtl  teapot.obj.ffi
GEFS/shaders/: debugFrag.glsl  debugVert.glsl
Lua/src/: lua.c  luac.c
engineCode/: Frustum.cpp  Frustum.h  Materials.h  Models.cpp  Models.h  RenderingSystem.cpp  RenderingSystem.h  Scene.cpp  Scene.h  Shadows.cpp  Shadows.h  luaSupport.cpp  luaSupport.h  main.cpp
lodGenerator/: CMakeLists.txt  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  serialize.hpp
